--- a/.github/workflows/ci-unit.yml
+++ b/.github/workflows/ci-unit.yml
@@ -28,8 +28,9 @@ jobs:
         run: npm run build
 
       - name: Run unit tests
-        run: npm test
+        run: npm run test:unit
 
       - name: Display SoftUni username
-        run: echo "SoftUni username: M.Ibisheva"
+        run: | 
+        echo "SoftUni username: M.Ibisheva"
 
