--- a/.github/workflows/ci-unit.yml
+++ b/.github/workflows/ci-unit.yml
@@ -31,6 +31,5 @@ jobs:
         run: npm run test:unit
 
       - name: Display SoftUni username
-        run: | 
-        echo "SoftUni username: M.Ibisheva"
+        run: echo "SoftUni username M.Ibisheva"
 
