--- a/.github/workflows/ci-unit.yml
+++ b/.github/workflows/ci-unit.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Run app
+        run: npm start
+
       - name: Run unit tests
         run: npm run test:unit
 
@@ -32,7 +35,7 @@ jobs:
 
       - name: Init playwright
         run: npx playwright install
-        
+
       - name: Run ui tests
         run: npm run test:ui
 
